--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = ststm32
 board = nucleo_f446re
 framework = arduino
+monitor_speed = 115200
+monitor_filters = direct
+build_flags = -Wl,-u_printf_float
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.15.2
+	arduino-libraries/Servo@^1.3.0
