Refactor by replacing servo library with different library. Now requires change in use of servos

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 build_flags = -Wl,-u_printf_float
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.2
-	arduino-libraries/Servo@^1.3.0
+	khoih-prog/STM32_ISR_Servo@^1.1.0
